--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <title>Food With Friends</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-route.js"></script>
+  <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
   <script src="//rawgithub.com/GoDisco/ngFacebook/master/ngFacebook.js"></script>
   <script src="js/all.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css" rel="stylesheet">
