--- a/public/partials/createEvent.html
+++ b/public/partials/createEvent.html
@@ -6,15 +6,15 @@
       </div>
     </div>
   </div>
-      <form ng-submit="createEvent()" class="createEventForm">
-        <h3 class="newEventHeader"> Create an Event</h3>
-        <input type="text" placeholder="Name of your event" ng-model="newEvent.name">
-        <input type="text" placeholder="Type of Food (optional)" ng-model="newEvent.term">
-        <input type="text" placeholder="Location" ng-model="newEvent.location">
-        <button type="submit" name="button">submit</button>
-        {{ newEvent }}
-      </form>
-    </div>
+  <div class="col m12">
+    <form ng-submit="createEvent()" class="createEventForm">
+      <h3 class="newEventHeader"> Create an Event</h3>
+      <input type="text" placeholder="Name of your event" ng-model="newEvent.name">
+      <input type="text" placeholder="Type of Food (optional)" ng-model="newEvent.term">
+      <input type="text" placeholder="Location" ng-model="newEvent.location">
+      <button type="submit" name="button">submit</button>
+      {{ newEvent }}
+    </form>
   </div>
 </div>
 
