--- a/public/partials/eventForm.html
+++ b/public/partials/eventForm.html
@@ -1,2 +1,26 @@
-  <h1>EVENT FORM GOES HERE</h1>
-  <h2>Event Id is: {{ eventId }}</h2>
+<h1>EVENT FORM GOES HERE</h1>
+<h2>Event Id is: {{ eventId }}</h2>
+
+<div class="container">
+  <div class="row">
+    <div class="col s12">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">EVENT_TITLE</span>
+            <form>
+              <p>PLACE_NAME_HERE</p>
+              <div class="chip">CATEGORIES</div>
+              <p>
+                <input name="group1" type="radio" id="test1"/>
+                <label for="test1">Yes</label>
+                <input name="group1" type="radio" id="test2"/>
+                <label for="test2">No</label>
+                <input name="group1" type="radio" id="test3"/>
+                <label for="test3">Allergic</label>
+              </p>
+            </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
