--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,10 +30,11 @@ label{
 }
 .angular-google-map-container {
   position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
+  position: relative;
+  width: 1000px;
+  height: 500px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .myEventBtn{
   opacity: 0.9;
