--- a/public/partials/eventForm.html
+++ b/public/partials/eventForm.html
@@ -4,20 +4,22 @@
       <div class="card blue-grey darken-1">
         <div class="card-content white-text">
           <span class="card-title">{{event.name}}</span>
-          <form>
+          <p>Please select where you would like to eat below...</p><br>
+          <form ng-submit="submit()">
             <div ng-repeat="place in event.places">
               <p>{{place.name}}</p>
               <div class="chip" ng-repeat="category in place.categories">{{category}}</div>
               <p>
-                <input name="{{place.name}}" type="radio" id="input{{place.$$hashKey}}1"/>
+                <input name="{{place.name}}" type="radio" id="input{{place.$$hashKey}}1" value="1" ng-model="form.firstPlace"/>
                 <label for="input{{place.$$hashKey}}1">Yes</label>
-                <input name="{{place.name}}" type="radio" id="input{{place.$$hashKey}}2"/>
+                <input name="{{place.name}}" type="radio" id="input{{place.$$hashKey}}2" value="0" ng-model="form.firstPlace"/>
                 <label for="input{{place.$$hashKey}}2">No</label>
-                <input name="{{place.name}}" type="radio" id="input{{place.$$hashKey}}3"/>
+                <input name="{{place.name}}" type="radio" id="input{{place.$$hashKey}}3" value="-10" ng-model="form.firstPlace"/>
                 <label for="input{{place.$$hashKey}}3">Allergic</label>
               </p>
               <br>
             </div>
+            <button type="submit" class="btn">Submit</button>
           </form>
         </div>
       </div>
