--- a/public/partials/createEvent.html
+++ b/public/partials/createEvent.html
@@ -42,7 +42,7 @@
        <div class="row">
          <button class=" btn-block col s2 offset-s5" ng-click="addfield()">Add field</button>
        </div>
-       <button type="submit" class="btn btn-block ">submit</button>
+       <button ng-click="goToEvent()" type="submit" class="btn btn-block ">submit</button>
       </form>
     </div>
   </div>
