--- a/public/partials/createEvent.html
+++ b/public/partials/createEvent.html
@@ -40,7 +40,7 @@
            </div>
        </div>
        <div class="row">
-         <button class=" btn-block col s2 offset-s5" ng-click="addfield()">Add field</button>
+         <button type="button" class=" btn-block col s2 offset-s5" ng-click="addfield()">Add field</button>
        </div>
        <button ng-click="goToEvent()" type="submit" class="btn btn-block ">submit</button>
       </form>
